--- a/.github/workflows/torrent.yml
+++ b/.github/workflows/torrent.yml
@@ -5,11 +5,11 @@ on:
       - ".github/workflows/torrent.yml"
       
 env:
-  name: "Firefox Setup 84.0.2"
-  comment: "Firefox Setup 84.0.2 by torrent-webseed-creator"
-  url: "https://cdn.stubdownloader.services.mozilla.com/builds/firefox-latest-ssl/en-US/win64/d64376e289766ce61f2d99579fb331af3b53619bcbff418513c944eb3aab6fa5/Firefox%20Setup%2084.0.2.exe"
-  file_name: "Firefox Setup 84.0.2.exe"
-  piece_size: 19 # Check the README.md for recommended piece size
+  name: "Test"
+  comment: "Test generation by torrent-webseed-creator"
+  url: "https://1fichier.com/?ov5btrus8404wlr8qlio"
+  file_name: "LBP.rar"
+  piece_size: 22 # Check the README.md for recommended piece size
       
 jobs:
   create:
